--- a/public/src/routes/docs.jade
+++ b/public/src/routes/docs.jade
@@ -7,7 +7,7 @@ mixin title(module)
 
 .row
   h1(style='padding-left: 7px;')
-    a(href='/') LessShell Docs
+    a(href='/') Docs
   .col-sm-4
     div(style='border-right: 1px solid #e5e6e7;')
 
